# BeamAdapter

./: .gitmodules  AdaptativeBeam.tex  AdaptiveBeamConstraint.cpp  AdaptiveBeamConstraint.h  AdaptiveBeamConstraint.inl  AdaptiveBeamContactMapper.cpp  AdaptiveBeamContactMapper.h  AdaptiveBeamContactMapper.inl  AdaptiveBeamController.cpp  AdaptiveBeamController.h  AdaptiveBeamController.inl  AdaptiveBeamForceFieldAndMass.cpp  AdaptiveBeamForceFieldAndMass.h  AdaptiveBeamForceFieldAndMass.inl  AdaptiveBeamLengthConstraint.cpp  AdaptiveBeamLengthConstraint.h  AdaptiveBeamLengthConstraint.inl  AdaptiveBeamMapping.cpp  AdaptiveBeamMapping.h  AdaptiveBeamMapping.inl  Authors.md  Authors.txt  BaseRestShape.cpp  BaseRestShape.h  BaseRestShape.inl  BeamAdapter-dependencies.prf  BeamAdapter.pro  BeamAdapter.txt  BeamAdapterConfig.cmake.in  BeamInterpolation.cpp  BeamInterpolation.h  BeamInterpolation.inl  CMakeLists.txt  GeometricalUtils.cpp  GeometricalUtils.h  ImplicitSurfaceAdaptiveConstraint.cpp  ImplicitSurfaceAdaptiveConstraint.h  ImplicitSurfaceAdaptiveConstraint.inl  InterventionalRadiologyController.cpp  InterventionalRadiologyController.h  (+392 more)
.github/workflow/: ci.yml
.github/workflows/: ci.yml  publish.yml
BeamAdapter_test/: BeamInterpolation_test.cpp  CMakeLists.txt  WireBeamInterpolation_test.cpp
BeamAdapter_test/component/constraint/: AdaptiveBeamConstraint.cpp  AdaptiveBeamSlidingConstraint.cpp  AdaptiveBeamSlidingConstraintTest.cpp  ConstraintTest.cmake
BeamAdapter_test/component/controller/: AdaptiveBeamController_test.cpp  InterventionalRadiologyController_test.cpp
BeamAdapter_test/component/engine/: EngineTest.cmake  WireRestShapeTest.cpp
BeamAdapter_test/component/forcefield/: AdaptiveBeamForceFieldAndMassTest.cpp  AdaptivePlasticBeamForceField.cpp  AdaptivePlasticBeamForceField_test.cpp  ForceFieldTest.cmake  MyFirstTest.cpp  gaussPointsInitialisation_test.cpp
BeamAdapter_test/component/helper/: GeometricalUtilsTest.cmake  GeometricalUtilsTest.cpp
BeamAdapter_test/component/mapping/: BeamLengthMappingTest.cpp  BeamProjectionDifferenceMultiMappingTest.cpp  MappingTest.cmake
BeamAdapter_test/component/model/: WireRestShape_test.cpp
BeamAdapter_test/scenes/: AdaptivePlasticBeamForceField.scn
bindings/: CMakeLists.txt
bindings/src/: Binding_InterventionalRadiologyController.cpp  Binding_InterventionalRadiologyController.h  Binding_InterventionalRadiologyController_doc.h
cmake/: environment.cmake  packaging.cmake
component/: AdaptiveBeamContactMapper.h  AdaptiveBeamFrictionContact.cpp  BeamInterpolation.cpp  BeamInterpolation.h  BeamInterpolation.inl  BeamPlasticInterpolation.cpp  BeamPlasticInterpolation.h  BeamPlasticInterpolation.inl  MultiAdaptiveBeamContactMapper.cpp  MultiAdaptiveBeamContactMapper.h  WireBeamInterpolation.cpp  WireBeamInterpolation.h  WireBeamInterpolation.inl  initBeamAdapter.cpp  initBeamAdapter.h
component/binding/: Binding_BeamInterpolation.cpp  Binding_BeamInterpolation.h  Module_BeamAdapter.cpp  Module_BeamAdapter.h
component/constraint/: AdaptiveBeamConstraint.h  AdaptiveBeamConstraint.inl  AdaptiveBeamLengthConstraint.cpp  AdaptiveBeamLengthConstraint.h  (+8 more)
constraint/: Constraint.cmake
controller/: AdaptiveBeamController.cpp  AdaptiveBeamController.h  Controller.cmake  InterventionalRadiologyController.h  SutureController.h
doc/: AdaptativeBeam.bib  BeamAdapter.tex  Doxyfile  README.md  TodoList.rtf  UMLBeamAdapter.ps
engine/: Engine.cmake  SteerableCatheter.cpp  WireRestShape.h
example/: 3instruments.scn  3instruments_collis.scn  3instruments_collis.scn.qglviewer.view  3instruments_collis_XiCath.scn  3instruments_collis_Zygote.scn  3instruments_collis_unbuilt.scn  3instruments_collis_unbuilt.scn.qglviewer.view  AdaptiveBeamConstraint.scn  AdaptiveBeamConstraintSimple.scn  AdaptiveBeamMapping.scn  AdaptiveBeamMappingRigidRigid.scn  AdaptiveCathAndGuide.scn  Anevrisme.scn  CombinedInstrumenstFriction.scn  InextensibleSuture.scn  PhysicalProperties.scn  SingleInstrumentFriction.scn  SingleInstrumentFriction.scn.qglviewer.view  Suture.scn  Suture2.scn  euHeartJanuary2012.scn  euHeartSeptNoXRay.scn  euHeartSeptNoXRayDebug.scn
examples/: 3instruments.scn  3instruments_collis.html  3instruments_collis.py  3instruments_collis.scn  3instruments_collis_XiCath.scn  3instruments_collis_Zygote.scn  3instruments_collis_unbuilt.scn  AdaptiveBeamConstraint.scn  AdaptiveBeamConstraintSimple.scn  AdaptiveBeamController.scn  AdaptiveBeamMapping.scn  AdaptiveBeamMappingRigidRigid.scn  AdaptiveBeamSlidingConstraint.scn  AdaptiveCathAndGuide.scn  AdaptiveCathAndGuide.scn.qglviewer.view  AdaptiveCollisionMapping.scn  Anevrisme.scn  BeamLengthMapping.scn  CombinedInstrumenstFriction.scn  InextensibleSuture.scn  InextensibleSuture.scn.qglviewer.view  PhysicalProperties.scn  RegressionStateScenes.regression-tests  SingleBeam.scn  SingleBeamDeployment.scn  SingleBeamDeploymentCollision.scn  SingleInstrumentFriction.scn  Suture.scn  Suture.scn.qglviewer.view  Suture2.scn  Suture2.scn.qglviewer.view  Tool_from_loader.scn  euHeartJanuary2012.scn  euHeartSeptNoXRay.scn  euHeartSeptNoXRayDebug.scn  test.py  verification_BeamAdapter.xml
extensions/CUDA/: BeamAdapter.CUDAConfig.cmake.in  CMakeLists.txt
extensions/CUDA/src/BeamAdapter.CUDA/: CudaInstantiations.cpp  init.cpp  init.h
extensions/CUDA/src/BeamAdapter/CUDA/: CudaInstantiations.cpp  config.h.in  init.cpp  init.h
forcefield/: AdaptiveBeamForceFieldAndMass.h  AdaptiveBeamForceFieldAndMass.inl  Forcefield.cmake
mapping/: AdaptiveBeamMapping.h  Mapping.cmake
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  functions_0.js  (+38 more)
solver/: Solver.cmake  UnbuiltGenericConstraintSolver.h
(+504 files in other folders)
